--- a/styles/global.css
+++ b/styles/global.css
@@ -39,3 +39,17 @@
   --body-sm: 400 14px var(--font-open);
   --body-xs: 400 12px var(--font-open);
 }
+
+body {
+  overflow: hidden;
+}
+
+h2,
+h3 {
+  color: var(--text-heading);
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
