--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -74,3 +74,99 @@
     }
   }
 }
+
+.customization {
+  display: grid;
+  gap: 1.75rem;
+
+  & div:first-of-type {
+    & .input-wrapper {
+      width: 100%;
+
+      & .radio-wrapper:nth-of-type(1) {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+        & .radio-inner {
+          position: relative;
+
+          width: 2.5rem;
+          height: 2.5rem;
+          background-color: var(--shape-button);
+          border-radius: 100%;
+
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          &:hover {
+            background-color: var(--shape-hover);
+          }
+
+          &:focus-within,
+          &:has(:checked) {
+            outline: 2px solid var(--brand-light);
+          }
+
+          & input,
+          & input:focus,
+          & input:hover {
+            all: unset;
+            position: absolute;
+            inset: 0;
+          }
+
+          & .color {
+            width: 1.75rem;
+            height: 1.75rem;
+            border-radius: 100%;
+          }
+        }
+      }
+    }
+  }
+
+  & div:nth-of-type(2) {
+    & .radio-wrapper {
+      flex-wrap: wrap;
+      gap: 0.5rem;
+
+      & .radio-inner {
+        position: relative;
+
+        width: 8.3rem;
+        padding: 0.25rem 0.25rem 0.5rem;
+        background-color: var(--shape-button);
+        border-radius: 0.5rem;
+        outline: 1px solid var(--input-stroke);
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
+
+        &:hover {
+          background-color: var(--shape-hover);
+        }
+
+        &:focus-within,
+        &:has(:checked) {
+          outline: 2px solid var(--brand-light);
+        }
+
+        & label {
+          margin: 0;
+        }
+
+        & input,
+        & input:focus,
+        & input:hover {
+          all: unset;
+          position: absolute;
+          inset: 0;
+        }
+      }
+    }
+  }
+}
