--- a/styles/fields/radio.css
+++ b/styles/fields/radio.css
@@ -16,7 +16,7 @@
     justify-content: center;
     gap: 0.5rem;
 
-    padding: 0.781rem 1rem;
+    padding: 0.67rem 1rem;
     border-radius: 0.25rem;
 
     cursor: pointer;
@@ -100,6 +100,8 @@
           align-items: center;
           justify-content: center;
 
+          cursor: pointer;
+
           &:hover {
             background-color: var(--shape-hover);
           }
@@ -145,6 +147,8 @@
         flex-direction: column;
         align-items: center;
         gap: 0.5rem;
+
+        cursor: pointer;
 
         &:hover {
           background-color: var(--shape-hover);
