--- a/styles/forms.css
+++ b/styles/forms.css
@@ -23,3 +23,38 @@ legend {
     color: var(--text-heading);
   }
 }
+
+.divider {
+  width: 100%;
+  padding-bottom: 2.5rem;
+
+  border-top: 1px solid var(--input-stroke);
+}
+
+.submit-wrapper {
+  justify-self: flex-end;
+
+  & button {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+
+    padding: 0.8125rem 1.25rem;
+    border: none;
+    outline: none;
+    border-radius: 0.5rem;
+    background-color: var(--brand-dark);
+
+    cursor: pointer;
+
+    & p {
+      font: var(--body-md);
+      font-weight: 600;
+      color: var(--text-heading);
+    }
+
+    &:hover {
+      background-color: var(--brand-mid);
+    }
+  }
+}
